# markdown-pdf-renderer

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/markdown_pdf_renderer/: __init__.py  cli.py  markdown_parser.py  renderer.py  styles.py
src/markdown_pdf_renderer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/markdown_pdf_renderer/styles/: __init__.py  dark.css  default.css
tests/: test_cli.py  test_headers_footers.py  test_images.py  test_markdown_parser.py  test_renderer.py  test_themes.py
