[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-pdf-renderer"
version = "0.1.0"
description = "Convert Markdown files to styled PDF documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "cracklings3d"}
]
keywords = ["markdown", "pdf", "converter", "cli"]
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "click>=8.1.0",
    "markdown>=3.5.0",
    "Pygments>=2.17.0",
    "WeasyPrint>=60.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
md-pdf = "markdown_pdf_renderer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
markdown_pdf_renderer = ["styles/*.css"]